--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="info">
-            <img src="https://img.hhcdn.ru/photo/694676604.jpeg?t=1660230045&h=h6jmogEuBn3YIHa_bkRVCQ" alt="мое фото">
+            <img src="photo_portfolio.jpg" alt="мое фото">
             <div class="info-text">
                 <h1>Николай Савицкий</h1>
                 <p>Я начинающий Frontend разработчик javascript.</p>
@@ -36,6 +36,7 @@
                 <li>Музыка</li>
                 <li>Финансовые рынки</li>
                 <li>Рукопашный бой</li>
+                <li>Кулинария</li>
             </ol>
         </div>
         <hr>
@@ -80,19 +81,19 @@
                 <div class="text_email">
                     <div class="text">  
                         <label for="text" >Ваше имя</label>
-                        <input type="text" id="text" placeholder="Введите имя">
+                        <input type="text" id="text" placeholder="Введите имя (тренировочная форма)">
                     </div>
                     <div class="email">
                         <label for="email">Ваш email</label>
-                        <input type="email" id="email" placeholder="Введите email">
+                        <input type="email" id="email" placeholder="Введите email (тренировочная форма)">
                     </div>
                 </div>
                 <div class="message">
                     <label for="message">Ваше сообщение</label>
-                    <textarea id="message" rows="10" placeholder="Введите сообщение..."></textarea>
+                    <textarea id="message" rows="10" placeholder="Введите сообщение...(тренировочная форма)"></textarea>
                 </div>
                 <br>
-                <button class="btn">Отправить</button>       
+                <button title="пока не работаю" class="btn">Отправить</button>       
             </form>
         </div>
     </div>
